Desarrollo del html index
Se agrego la seccion del "Header", dentro de este se agrego la barra social, un boton de login y el nombre del usuario al cual pertenece el repositorio.

Ademas en la seccion body se agregaron dos imagenes para empezar a dar formato al banner inicial de presentación.

--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,39 @@
     <link rel="stylesheet" href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" /> <!-- Llamamos Archivo de CSS de Bootstrap-->
 
   </head>
+  
   <body>
-    
+    <header class="p-3 text-bg-dark">
+      <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start d-grid gap-3">
+          <p class="text-start lead me-lg-auto mb-2 justify-content-center mb-md-0">
+            GONZALEZ ESPADA, José Ismael
+          </p>
+  
+          <div class="d-flex d-grid gap-2">
+            <span class="social-icon"> <a href="https://www.linkedin.com/in/ismael-gonzalez-ow/"> <img src="Image/linkedin.png" height="35px"> </a></span>
+            <span class="social-icon"> <a href="https://www.instagram.com/ismael_ow/"> <img src="Image/instagram.png" height="35px"> </a></span>
+            <span class="social-icon"> <a href="https://github.com/IsmaQty"> <img src="Image/github.png" height="35px"> </a></span>
+          </div>
 
+          <div class="text-end">
+            <button type="button" class="btn btn-outline-light me-2">Login</button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="banner"> <!--width = ancho ... height = altura ... alt = descripcion en texto de la imagen-->
+      <div>
+        <img src="Image/banner.png" class="img-fluid" alt="imagen banner de fondo" width="100%"> <!--1280x703-->
+      </div>
+    </section>
+
+    <section>
+      <div>
+        <img src="Image/fotoPerfil.png" class="fotoPerfil" alt="imagen foto de perfil">
+      </div>
+    </section>
 
     <!-- Bootstrap JS -->
     <script src="bootstrap-5.3.0-alpha1-dist/js//bootstrap.bundle.min.js"></script>
