--- a/prueba.html
+++ b/prueba.html
@@ -16,13 +16,33 @@
   </head>
   
   <!--CUERPO: Contenido HTML-->
-  <body>
+  <body style="background-color: lightblue;">
     <!--HEADER Bootstrap: Cabezera de la página-->
     <header>
-        <img src="Image/ArgProgLogo.png" id="argprglogo">
+      
     </header>
 
 
+    <div class="contenedor p-5" style="border: 1px #000000 solid">
+      <div id="circular-progress">
+        <div class="progress" id="circular-progress">
+          <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Success striped example" 
+          style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+    </div>
+
+  <!--NO TOCAR-->
+  <!--
+    <div class="p-3">
+      <div class="progress" style="border: 1px #000000 solid">
+        <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Success striped example" 
+        style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
+  -->
+
+    
     <!-- Bootstrap JS -->
     <script src="bootstrap-5.3.0-alpha1-dist/js//bootstrap.bundle.min.js"></script>
   </body>
